mobile nav bar, fix padding bug on iPhone (#1128)

--- a/src/molecules/MobileNavBar/MobileNavBar.pcss
+++ b/src/molecules/MobileNavBar/MobileNavBar.pcss
@@ -19,6 +19,7 @@
   width: 4rem;
   height: 4rem;
   margin: 4px;
+  padding: 0;
   border-radius: 50%;
   color: var(--grey-700);
   background-color: var(--white);
